@@ -7,18 +7,16 @@ import it.polimi.ingsw.model.*;
 import it.polimi.ingsw.model.enums.GamePhase;
 import it.polimi.ingsw.model.enums.PawnColor;
 import it.polimi.ingsw.model.enums.Tower;
-import it.polimi.ingsw.network.message.Message;
 import it.polimi.ingsw.observer.Observer;
 import it.polimi.ingsw.persistency.DataDumper;
 import it.polimi.ingsw.utils.Pair;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static it.polimi.ingsw.model.enums.GamePhase.ACTION_MOVE_STUDENTS;
 import static it.polimi.ingsw.model.enums.GamePhase.PLANNING;
 
-//TODO the whole controller (and model) must be serializable
+//TODO remove this generic...
 public class GameController<T> implements Observer<T> {
     protected Game game;
     protected TableController tableController;
@@ -29,7 +27,6 @@ public class GameController<T> implements Observer<T> {
         this.tableController = tableController;
     }
 
-    //TODO who send us the players?
     public GameController(Player[] players) {
         this.init(players);
     }
@@ -37,14 +34,6 @@ public class GameController<T> implements Observer<T> {
     protected void init(Player[] players) {
         this.game = new Game(players);
         this.tableController = new TableController(game.getTable());
-        //TODO what is this part for?
-        LinkedList<PawnColor> students = new LinkedList<>();
-        for (Player c : game.getPlayers()) {
-            for (int i = 0; i < game.getParameters().getInitialStudentsCount(); i++) {
-                students.add(tableController.getBag().drawStudent());
-            }
-            c.getBoard().addStudentsToEntrance(students);
-        }
     }
 
     //TODO move away from here. The game controller controls ONLY the game
@@ -212,8 +201,8 @@ public class GameController<T> implements Observer<T> {
 
     private boolean isInfluenceDraw(Player player, int influence){
         for(Player p : game.getPlayers()){
-            if(!p.equals(player)){
-                if(influence == tableController.countInfluenceOnIsland(p.getBoard().getProfessors(), p.getBoard().getTowerColor()))
+            if(!p.equals(player) && influence == tableController
+                    .countInfluenceOnIsland(p.getBoard().getProfessors(), p.getBoard().getTowerColor())) {
                     return true;
             }
         }
@@ -290,12 +279,11 @@ public class GameController<T> implements Observer<T> {
         //TODO maybe throw an exception if the game is not over?
         //TODO don't call every time game.getPlayers() but save them in a variable
         int min = 0;
-        boolean flag = false;
         for (int i = 0; i < game.getPlayersCount(); i++) {
             if (game.getPlayers()[i].getBoard().getTowersCount() < game.getPlayers()[min].getBoard().getTowersCount())
                 min = i;
-            if (game.getPlayers()[i].getBoard().getTowersCount() == game.getPlayers()[min].getBoard().getTowersCount()) {
-                if (game.getPlayers()[i].getBoard().countProfessors() > game.getPlayers()[min].getBoard().countProfessors())
+            if (game.getPlayers()[i].getBoard().getTowersCount() == game.getPlayers()[min].getBoard().getTowersCount() &&
+                game.getPlayers()[i].getBoard().countProfessors() > game.getPlayers()[min].getBoard().countProfessors()) {
                     min = i;
             }
         }
@@ -321,7 +309,7 @@ public class GameController<T> implements Observer<T> {
                 Optional<Player> nextPlayer = Arrays.stream(game.getPlayers())
                         .filter((Player p) ->
                                 p.getDiscardPileHead().value() >= game.getPlayers()[game.getCurrentPlayer()].getDiscardPileHead().value())
-                        .min(Comparator.comparing(p -> ((p.getDiscardPileHead().value()))));
+                        .min(Comparator.comparing(p -> (p.getDiscardPileHead().value())));
 
                 if (nextPlayer.isEmpty()) nextPlayer = Optional.of(game.getPlayers()[0]);
 
@@ -329,6 +317,7 @@ public class GameController<T> implements Observer<T> {
                     if (game.getPlayers()[i].getNickname().equals(nextPlayer.get().getNickname()))
                         return i;
                 }
+                break;
             case ACTION_END:
                 return game.getCurrentPlayer();
         }
@@ -407,7 +396,7 @@ public class GameController<T> implements Observer<T> {
         for (Player p : game.getPlayers()) {
             towersCount.add(p.getBoard().getTowersCount());
         }
-        List<Integer> sortedList = towersCount.stream().sorted().collect(Collectors.toList());
+        List<Integer> sortedList = towersCount.stream().sorted().toList();
         if (sortedList.get(0) < sortedList.get(1)) {
             for (Player p : game.getPlayers()) {
                 if (p.getBoard().getTowersCount() == sortedList.get(0)) {
@@ -421,7 +410,7 @@ public class GameController<T> implements Observer<T> {
         for (Player p : game.getPlayers()) {
             professorsCount.add(p.getBoard().countProfessors());
         }
-        List<Integer> professorsSortedList = professorsCount.stream().sorted().collect(Collectors.toList());
+        List<Integer> professorsSortedList = professorsCount.stream().sorted().toList();
         if (professorsSortedList.get(0) < professorsSortedList.get(1)) {
             for (Player p : game.getPlayers()) {
                 if (p.getBoard().countProfessors() == professorsSortedList.get(0)) {
@@ -432,6 +421,4 @@ public class GameController<T> implements Observer<T> {
         // it arrives here only if there are 2 player with the same number of tower and professors
         return "draw";
     }
-
-
 }
